#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([libhpctimer], [0.1.0], [surikx@gmail.com])
AC_CONFIG_SRCDIR([hpctimer.c])
AC_CONFIG_HEADERS([config.h])

AC_CANONICAL_TARGET
AC_CANONICAL_HOST

VERSION=0.1.0
AC_SUBST(VERSION)

LT_CURRENT=0
LT_REVISION=1
LT_AGE=0
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE()

# Checks for programs.
AC_PROG_CC_C89
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET
#AC_LANG_C

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([time.h stdlib.h sys/time.h utmpx.h sched.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([clock_gettime gettimeofday sched_getcpu])

CFLAGS="-g"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
